<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FithStep">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/q5_text"
        android:textSize="20sp"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:padding="8sp" />

    <RadioGroup
        android:id="@+id/radioGroupFithRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp">

        <RadioButton
            android:id="@+id/fithOneRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1938-1945"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fithTwoRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1964-1975"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fithThreeRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1950-1953"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fithFourRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1941-1945"
            android:textSize="20sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:padding="8sp" />

    <Button
        android:id="@+id/toEndBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/end_btn"/>
</LinearLayout>