<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".StepTwo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/q2_text"
        android:textSize="20sp"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:padding="8sp" />

    <RadioGroup
        android:id="@+id/radioGroupTwoRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp">

        <RadioButton
            android:id="@+id/twoOneRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Дмитрий Донской"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/twoTwoRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Василий Шуйский"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/twoThreeRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Иван 4 Васильевич (Иван Грозный)"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/twoFourRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Александр Невский"
            android:textSize="20sp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:padding="8sp" />

    <Button
        android:id="@+id/toNextTwoBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:text="@string/btn_to_next"/>

</LinearLayout>